--- a/src/components/sbb-radio-button/sbb-radio-button.scss
+++ b/src/components/sbb-radio-button/sbb-radio-button.scss
@@ -3,19 +3,22 @@
 @include host-component-properties;
 
 :host {
-  --sbb-radio-button-size: calc(var(--sbb-spacing-fixed-6x) - var(--sbb-border-width-1x));
+  --sbb-radio-button-size: calc(var(--sbb-spacing-fixed-6x) - var(--sbb-border-width-1x) * 2);
   --sbb-radio-button-label-color: var(--color-black-default);
   --sbb-radio-button-checked-color: var(--sbb-color-red-default);
   --sbb-radio-button-border-radius: var(--sbb-border-radius-8x);
   --sbb-radio-button-transition: border var(--sbb-animation-duration-4x) ease;
-  --sbb-radio-button-icon-align: 0;
+
+  // Align radio button to the first row of the label based on the line-height so that it's vertically
+  // aligned to the label and sticks to the top if the label breaks into multiple lines
+  --sbb-radio-button-icon-align: calc(
+    (
+        var(--sbb-font-size-text-m) * var(--sbb-typo-line-height-body-text) -
+          var(--sbb-radio-button-size)
+      ) / 2
+  );
 
   display: inline-block;
-  padding-block: #{px-to-rem-build(1)};
-
-  @include mq($from: medium) {
-    --sbb-radio-button-icon-align: calc(var(--sbb-spacing-fixed-1x) / 2);
-  }
 }
 
 :host(:focus-visible) {
@@ -32,18 +35,29 @@
 
 /* HTML5 Boilerplate accessible hidden styles */
 [type='radio'] {
-  @include visuallyHidden;
+  @include screenReaderOnly;
 }
 
 /* One radio button per line */
 label {
-  @include text-s--regular;
+  @include text-m--regular;
 
   cursor: pointer;
   user-select: none;
   position: relative;
   color: var(--sbb-radio-button-label-color);
   -webkit-tap-highlight-color: transparent;
+
+  :host([label-size='s']) & {
+    @include text-s--regular;
+
+    --sbb-radio-button-icon-align: calc(
+      (
+          var(--sbb-font-size-text-s) * var(--sbb-typo-line-height-body-text) -
+            var(--sbb-radio-button-size)
+        ) / 2
+    );
+  }
 }
 
 [type='radio'] + span {
@@ -62,6 +76,7 @@ label {
   border: calc(var(--sbb-radio-button-size) / 2) solid var(--sbb-color-white-default);
   box-shadow: 0 0 0 var(--sbb-border-width-1x) var(--sbb-color-smoke-default);
   margin-inline-end: calc(var(--sbb-spacing-fixed-2x) + var(--sbb-border-width-1x));
+  margin-inline-start: var(--sbb-border-width-1x);
   margin-block-start: var(--sbb-radio-button-icon-align);
   transition: var(--sbb-radio-button-transition);
 }
