--- a/src/components/sbb-radio-button-group/sbb-radio-button-group.scss
+++ b/src/components/sbb-radio-button-group/sbb-radio-button-group.scss
@@ -15,6 +15,8 @@
 }
 
 .sbb-radio-group__error {
+  @include text-xxs--regular;
+
   display: inline-block;
   margin-block-start: var(--sbb-spacing-fixed-1x);
 }
