feat: improve component within the form-field

--- a/src/components/sbb-form-field/sbb-form-field.scss
+++ b/src/components/sbb-form-field/sbb-form-field.scss
@@ -156,7 +156,7 @@ slot[name='label'] > span {
 
 // Input
 /* stylelint-disable plugin/stylelint-bem-namics */
-.form-field__input ::slotted(:where(input, select, .sbb-form-field-element)) {
+.form-field__input ::slotted(:where(input, select, [data-sbb-form-field])) {
   @include text-m--regular;
   @include placeholder;
   @include ellipsis;
