--- a/src/components/sbb-tooltip/sbb-tooltip.scss
+++ b/src/components/sbb-tooltip/sbb-tooltip.scss
@@ -2,18 +2,6 @@
 // travel the shadow boundary are defined through this mixin
 @include host-component-properties;
 
-@mixin tooltipArrow {
-  content: '';
-  position: absolute;
-  display: block;
-  width: var(--sbb-tooltip-arrow-size);
-  height: var(--sbb-tooltip-arrow-size);
-  left: var(--sbb-tooltip-arrow-position-x);
-  bottom: calc(100% - calc(var(--sbb-tooltip-arrow-size) / 2));
-  background-color: var(--sbb-tooltip-background);
-  transform: rotate(45deg);
-}
-
 :host {
   --sbb-tooltip-position: absolute;
   --sbb-tooltip-position-x: 0;
@@ -39,6 +27,21 @@
 
 :host(.sbb-tooltip--above) {
   --sbb-tooltip-transform: translateY(calc(var(--sbb-spacing-fixed-2x) * -1));
+}
+
+// Tooltip arrow and arrow top cover
+.sbb-tooltip::after,
+.sbb-tooltip__content::before {
+  content: '';
+  position: absolute;
+  display: block;
+  width: var(--sbb-tooltip-arrow-size);
+  height: var(--sbb-tooltip-arrow-size);
+  left: var(--sbb-tooltip-arrow-position-x);
+  bottom: calc(100% - calc(var(--sbb-tooltip-arrow-size) / 2));
+  background-color: var(--sbb-tooltip-background);
+  border-radius: #{px-to-rem-build(4)} 0;
+  transform: rotate(45deg);
 }
 
 .sbb-tooltip {
@@ -67,15 +70,13 @@
 
   // Tooltip arrow
   &::after {
-    @include tooltipArrow;
     @include shadow-level-5-hard;
-
-    border-radius: #{px-to-rem-build(4)} 0;
-    z-index: -1;
 
     @include ifForcedColors {
       outline: var(--sbb-border-width-1x) solid CanvasText;
     }
+
+    z-index: -1;
   }
 
   :host(.sbb-tooltip--closing) & {
@@ -102,13 +103,6 @@
   outline: none;
   background-color: var(--sbb-tooltip-background);
   overflow: hidden;
-
-  // Tooltip arrow cover top
-  &::before {
-    @include tooltipArrow;
-
-    border-radius: var(--sbb-spacing-fixed-1x) 0;
-  }
 
   :host(.sbb-tooltip--above) & {
     &::before {
