--- a/src/components/sbb-pearl-chain-vertical-item/sbb-pearl-chain-vertical-item.scss
+++ b/src/components/sbb-pearl-chain-vertical-item/sbb-pearl-chain-vertical-item.scss
@@ -198,6 +198,17 @@
   vertical-align: top;
 }
 
+.sbb-pearl-chain-vertical-item__column--right {
+  width: var(--sbb-pearl-chain-vertical-right-item-width, 100%);
+}
+
+.sbb-pearl-chain-vertical-item__column--middle {
+  width: var(
+    --sbb-pearl-chain-vertical-middle-item-width,
+    --sbb-pearl-chain-vertical-item-dot-size
+  );
+}
+
 slot[name='left']::slotted(*) {
   margin-block-start: var(--sbb-pearl-chain-vertical-left-item-block-start);
   padding-inline-end: var(--sbb-pearl-chain-vertical-left-item-inline-end);
