refactor: change states handling

--- a/src/components/sbb-menu/sbb-menu.scss
+++ b/src/components/sbb-menu/sbb-menu.scss
@@ -108,7 +108,7 @@
     }
   }
 
-  &.sbb-menu--closing {
+  :host(.sbb-menu--closing) & {
     pointer-events: none;
     animation-name: hide;
   }
