--- a/src/components/sbb-pearl-chain-vertical-item/sbb-pearl-chain-vertical-item.scss
+++ b/src/components/sbb-pearl-chain-vertical-item/sbb-pearl-chain-vertical-item.scss
@@ -26,6 +26,7 @@
   display: table-row;
   position: relative;
 
+  --sbb-pearl-chain-vertical-right-item-width: 100%;
   --sbb-pearl-chain-vertical-item-dot-size-ultra: var(--sbb-spacing-fixed-3x);
   --sbb-pearl-chain-vertical-item-dot-size-large: #{px-to-rem-build(10)};
   --sbb-pearl-chain-vertical-item-dot-size-medium: var(--sbb-spacing-fixed-2x);
@@ -199,7 +200,7 @@
 }
 
 .sbb-pearl-chain-vertical-item__column--right {
-  width: var(--sbb-pearl-chain-vertical-right-item-width, 100%);
+  width: var(--sbb-pearl-chain-vertical-right-item-width);
 }
 
 .sbb-pearl-chain-vertical-item__column--middle {
