--- a/src/components/sbb-pearl-chain-vertical/sbb-pearl-chain-vertical.scss
+++ b/src/components/sbb-pearl-chain-vertical/sbb-pearl-chain-vertical.scss
@@ -1,6 +1,10 @@
 @include host-component-properties;
 
+:host {
+  --sbb-pearl-chain-vertical-width: 100%;
+}
+
 .sbb-pearl-chain-vertical {
   display: table;
-  width: var(--sbb-pearl-chain-vertical-width, 100%);
+  width: var(--sbb-pearl-chain-vertical-width);
 }
