fix(sbb-pearl-chain-vertical): add width to columns (#1455)
Co-authored-by: Kuschan Luise <luise.kuschan@sbb.ch>

--- a/src/components/sbb-pearl-chain-vertical/sbb-pearl-chain-vertical.scss
+++ b/src/components/sbb-pearl-chain-vertical/sbb-pearl-chain-vertical.scss
@@ -1,6 +1,10 @@
 @include host-component-properties;
 
+:host {
+  --sbb-pearl-chain-vertical-width: 100%;
+}
+
 .sbb-pearl-chain-vertical {
   display: table;
-  table-layout: fixed;
+  width: var(--sbb-pearl-chain-vertical-width);
 }
