--- a/src/components/sbb-menu/sbb-menu.scss
+++ b/src/components/sbb-menu/sbb-menu.scss
@@ -102,7 +102,7 @@
     opacity: 1;
     pointer-events: all;
     animation: {
-      name: show;
+      name: open;
       duration: var(--sbb-menu-animation-duration);
       timing-function: var(--sbb-menu-animation-easing);
     }
@@ -110,7 +110,7 @@
 
   :host(.sbb-menu--closing) & {
     pointer-events: none;
-    animation-name: hide;
+    animation-name: close;
   }
 
   @include ifForcedColors {
@@ -163,7 +163,7 @@
   }
 }
 
-@keyframes show {
+@keyframes open {
   from {
     visibility: hidden;
     opacity: 0;
@@ -177,7 +177,7 @@
   }
 }
 
-@keyframes hide {
+@keyframes close {
   from {
     visibility: visible;
     opacity: 1;
