--- a/src/components/sbb-menu/sbb-menu.scss
+++ b/src/components/sbb-menu/sbb-menu.scss
@@ -46,8 +46,8 @@
   }
 }
 
-:host(.sbb-menu--presented),
-:host(.sbb-menu--presenting) {
+:host(.sbb-menu--opened),
+:host(.sbb-menu--opening) {
   --sbb-menu-backdrop-color: var(--sbb-color-black-alpha-20);
 
   @include mq($from: medium) {
@@ -102,15 +102,15 @@
     opacity: 1;
     pointer-events: all;
     animation: {
-      name: show;
+      name: open;
       duration: var(--sbb-menu-animation-duration);
       timing-function: var(--sbb-menu-animation-easing);
     }
   }
 
-  &.sbb-menu--dismissing {
+  :host(.sbb-menu--closing) & {
     pointer-events: none;
-    animation-name: hide;
+    animation-name: close;
   }
 
   @include ifForcedColors {
@@ -163,7 +163,7 @@
   }
 }
 
-@keyframes show {
+@keyframes open {
   from {
     visibility: hidden;
     opacity: 0;
@@ -177,7 +177,7 @@
   }
 }
 
-@keyframes hide {
+@keyframes close {
   from {
     visibility: visible;
     opacity: 1;
