feat: handle parent disabled and required states

--- a/src/components/sbb-checkbox/sbb-checkbox.scss
+++ b/src/components/sbb-checkbox/sbb-checkbox.scss
@@ -13,6 +13,7 @@
   display: inline-block;
 }
 
+:host([data-disabled]),
 :host([disabled]) {
   --checkbox-color: var(--sbb-color-graphite-default);
   --checkbox-border-color: var(--sbb-color-graphite-default);
