feat: enforce borderless

--- a/src/components/sbb-form-field/sbb-form-field.scss
+++ b/src/components/sbb-form-field/sbb-form-field.scss
@@ -76,7 +76,8 @@
   }
 }
 
-:host(.form-field--borderless) {
+/* stylelint-disable-next-line plugin/stylelint-bem-namics */
+:host(:is(.form-field--borderless, [data-input-type='sbb-slider'])) {
   --form-field-border-color: transparent;
 }
 
